Fixed scrollbar background style bug

--- a/src/frontend/styles/main.styl
+++ b/src/frontend/styles/main.styl
@@ -123,7 +123,7 @@ a
   background: #ddd; 
 
 *::-webkit-scrollbar-track
-  background transparent
+  background #162575
 
 ul.change-log-version
     padding 0 0 0 24px
